Merge: Editor Branch

--- a/legacy/css/general.css
+++ b/legacy/css/general.css
@@ -2,15 +2,19 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
 .row {
   width: 200%;
 }
+
 .grid {
   position: absolute;
 }
+
 .hidden {
   display: none;
 }
+
 .cell {
   width: 4em;
   height: 4em;
@@ -19,39 +23,30 @@ body {
   display: inline-block;
   margin: 0;
 }
-.cell > div {
+
+.component {
   width: 4em;
   height: 4em;
   border-radius: 100%;
   position: absolute;
 }
-.cell > div:first-of-type {
+
+.a {
   top: -2em;
   left: -2em;
 }
-.cell > div:last-of-type {
+
+.b {
   bottom: -2em;
   right: -2em;
 }
-.cell.rot > div:first-of-type {
-  left: auto;
+
+.d {
+  top: -2em;
   right: -2em;
 }
-.cell.rot > div:last-of-type {
-  right: auto;
+
+.e {
+  bottom: -2em;
   left: -2em;
-}
-.links {
-  position: absolute;
-  background: white;
-  bottom: 0;
-  padding: .5rem;
-}
-.links a {
-  color: black;
-  margin: 0 .125em;
-}
-.links > * {
-  margin: 0;
-  font-family: sans-serif;
 }
